--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
               <div class="product-content">
 
                 <div class="wrapper">
-                  <h3 class="product-name">Kids Crow</h3>
+                  <h3 class="product-name">Kids Grow</h3>
 
                 </div>
 
